@@ -21,3 +21,5 @@ CI at 90% =[ 1.74156e-04 ; 2.31244e-04 ]
 Limit state calls = 40000
 ************************************************************************************************
 
+probabilityEstimate=1.000000e+00 varianceEstimate=0.000000e+00 standard deviation=-1.00e+00 coefficient of variation=-1.00e+00 confidenceLength(0.95)=0.00e+00 outerSampling=1000 blockSize=1
+probabilityEstimate=1.000000e+00 varianceEstimate=0.000000e+00 standard deviation=-1.00e+00 coefficient of variation=-1.00e+00 confidenceLength(0.95)=0.00e+00 outerSampling=10000 blockSize=1
